[package]
name = "timeflake-rs"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Timeflake is a 128-bit, roughly-ordered, URL-safe UUID. Inspired by Twitter's Snowflake, Instagram's ID and Firebase's PushID."
repository = "https://github.com/perillamint/timeflake-rs"
keywords = ["timeflake"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
rand = "0.8.5"
custom_error = "1.9.2"
